--- a/alura/.gitignore
+++ b/alura/.gitignore
@@ -28,6 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+!**/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
